@@ -2,3 +2,4 @@ Remove deprecated MonteCarlo, ImportanceSampling, QuasiMonteCarlo, RandomizedQua
 Remove deprecated Field::getDimension, getSpatialDimension, getSpatialMean, getTemporalMean in 1.12
 Remove deprecated Process::getDimension, getSpatialDimension in 1.12
 Remove deprecated CovarianceModel::getDimension, getSpatialDimension, getSpatialCorrelation, setSpatialCorrelation in 1.12
+Remove deprecated SecondOrderModel::getDimension, getSpatialDimension in 1.12
